--- a/class/class27-materials/api-template/css/style.css
+++ b/class/class27-materials/api-template/css/style.css
@@ -3,89 +3,68 @@
 /*******************************************/
 
 /* Box Model Hack */
-*{
-font: "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+/**{
+  box-sizing: border-box;
 }
-/* Box Model Hack */
-body{
 
-  margin: 40px;
-  background: #293f50;
-  color: #888;
-  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-/******************************************
+******************************************/
 /* LAYOUT
-/*******************************************/
-
-
+/******************************************
+img{
+  display: block;
+  margin: 0 auto;
+}
 
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
-
-
-/* CSS */
-
-.input-date{
-  width: 300px;
-  height: auto;
-  border-radius:50px
-
+body{
+	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.media-button {
-  align-items: center;
-  background-color: #0A66C2;
-  border: 0;
-  border-radius: 100px;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  justify-content: center;
-  line-height: 20px;
-  max-width: 480px;
-  min-height: 40px;
-  min-width: 0px;
-  overflow: hidden;
-  padding: 0px;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
-  touch-action: manipulation;
-  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
-}
-
-.media-button:hover,
-.media-button:focus { 
-  background-color: #16437E;
-  color: #ffffff;
-}
-
-.media-button:active {
-  background: #09223b;
-  color: rgb(255, 255, 255, .7);
-}
-
-.media-button:disabled { 
-  cursor: not-allowed;
-  background: rgba(0, 0, 0, .08);
-  color: rgba(0, 0, 0, .3);
-}
-.image {
-  display: inline-block;
-}
-
 .picture-container{
-  box-sizing: content-box;
-  width: 800px;
-  max-height: 80%;
+	margin: 1200px;
+	height: 600px;
+	display:block;
+	justify-content: center;
+	align-items: center;
+	margin: 40px;
+	background-color: white;
+	color: black;
+	cursor: hover;
+	box-shadow: 1px 1px 3px #292929;
+}
+
+.picture-container:active{
+	box-shadow: 1px 1px 3px #292929;
+}
+
+img{
+	width:800px;
+	height: 600px;
+	float: left;
+	padding-left: 0;
+}
+
+.header{
+	margin: 40px;
+	align-items: center; 
+	justify-content: center;
+}
+.text-description{
+	padding-left: 10px;
+	padding-top: 20px;
+	float: right;
+	width: 300px;
+	height: 600px;
+	padding-right: 10px;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+.image-video-container{
+	float: left;
+	width: 500px;
 
 }
+
