--- a/class/class27-materials/card-game/css/style.css
+++ b/class/class27-materials/card-game/css/style.css
@@ -22,36 +22,35 @@ h2 {
 	font-weight: 300;
 }
 
-.header,
-.section,
-.aside,
-.footer {
-  margin: 0 2.5% 25px 2.5%
+header,
+section,
+footer {
+  margin: 0 1.5% 25px 1.5%;
+  text-align: center;
 }
-
-.section {
+section {
   float: left;
-  width: 45%; 
+  width: 47%; 
+  height: 500px;
+  border-bottom: 2px dotted lavender;
+  border-left: 2px solid lavender;
+  padding:10px;
+  
+}
+footer{
+  background-color:red;
+  color: white;
+  height: 100px;
+  clear: left;
+  padding: 10px;
+}
+header{
+  height: 100px;
+  border-bottom: 2px dotted lavender;
 }
 
-.aside {
-  float: right;
-  width: 45%;
-}
-.footer {
-  clear: both;
-  margin-bottom: 0;
-  align-content: center;
-  border-bottom: double red;
- 
-}
- .footer .result {
-  clear: both;
-  margin-bottom: 0;
 
- .header button{
-  	border-radius: 50%;
-  }
+
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
